--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,3 @@
-.settings-banner {
-  background-color: var(--background-secondary-alt);
-  border-radius: 4px;
-  margin-bottom: 2em;
-  padding: 1.5em;
-  text-align: left;
-}
-
-.settings-banner h4 {
-  margin: 0;
+button:focus {
+  box-shadow: 0 0 0 1px var(--interactive-accent);
 }
